chore: fix SonarQube reported issues and add --stacktrace for CI